<resources>
    <string name="app_name">All Car Expenses</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_fragment_inicio">Home</string>
    <string name="title_activity_fragment_coches">Cars</string>
    <string name="title_activity_fragment_repostajes">Refueling</string>
    <string name="title_activity_fragment_mantenimientos">Maintenance</string>
    <string name="title_activity_fragment_recambios">Car Parts</string>
    <string name="title_activity_frm_nuevo_coche">New Car</string>
    <string name="title_activity_fragment_itvs">Vehicle inspection</string>
    <string name="title_activity_fragment_peajes">Tolls</string>
    <string name="title_activity_fragment_seguros">Car Insurance</string>
    <string name="title_activity_fragment_ajustes">Settings</string>
    <string name="title_activity_fragment_impuesto_circulacion">Taxes</string>
    <string name="action_save">Save</string>
    <string name="action_new">New</string>
    <string name="action_nuevo_repostaje">New Refuel</string>
    <string name="action_nuevo_mantenimiento">New Maintenance</string>
    <string name="action_done">OK</string>
    <string name="action_delete">Delete</string>
    <string name="action_adjuntar">Add</string>
    <string name="title_activity_frm_detalle">Car</string>
    <string name="lb_matricula">(*)Car Registration: </string>
    <string name="lb_nombre_coche">Name: </string>
    <string name="lb_marca_coche">(*)Manufacturer: </string>
    <string name="lb_modelo_coche">Model: </string>
    <string name="lb_version_coche">Trim: </string>
    <string name="lb_tipo_combustible">(*)Fuel type: </string>
    <string name="lb_tamano_deposito">Fuel tank volume: </string>
    <string name="lb_km_iniciales">Initial mileage: </string>
    <string name="lb_km_actuales">Actual Mileage: </string>
    <string name="lb_km_actuales_km">Actual Mileage:</string>
    <string name="lb_km_actuales_millas">Actual Mileage:</string>
    <string name="lb_comentarios">Comments: </string>
    <string name="lb_anadir_fotografia_coche">Add photo </string>
    <string name="lb_fecha_compra">Purchase Date: </string>
    <string name="lb_fecha_matriculacion">First registration: </string>
    <string name="lb_fecha_fabricacion">Manufacturing date: </string>
    <string name="lb_cc">Engine displacement: </string>
    <string name="title_activity_frm_repostaje">Refuel: </string>
    <string name="lb_seleccionar_coche">(*)Select car: </string>
    <string name="lb_fecha_repostaje">(*)Refuel Date: </string>
    <string name="lb_km_repostaje">(*)Odometer: </string>
    <string name="lb_millas_repostaje">(*)Odometer: </string>
    <string name="lb_precio">(*)PPL: </string>
    <string name="lb_precio_por_litro">(*)(*)PPL: </string>
    <string name="lb_precio_por_galon_us">(*)Price per Gallon(US): </string>
    <string name="lb_precio_por_galon_uk">(*)Price per Gallon imp: </string>
    <string name="lb_costo">(*)Refuel cost: </string>
    <string name="lb_cantidad">(*)Quantity: </string>
    <string name="lb_cantidad_litros">(*)Quantity: </string>
    <string name="lb_cantidad_galones_us">(*)Quantity: </string>
    <string name="lb_cantidad_galones_uk">(*)Quantity: </string>
    <string name="lb_tipo_repostaje">(*)Type: </string>
    <string name="rb_completo">Full</string>
    <string name="rb_parcial">Partial</string>
    <string name="chk_aa">A/C</string>
    <string name="chk_remolque">Trailer</string>
    <string name="chk_baca">Roof Bars</string>
    <string name="lb_tipo_conduccion">Driving style</string>
    <string name="rb_normal">Normal</string>
    <string name="rb_economica">Economic</string>
    <string name="rb_deportiva">Sport</string>
    <string name="lb_tipo_carretera">Road type</string>
    <string name="lb_tipo_pago">Payment method</string>
    <string name="lb_velocidad_media">Avg. speed</string>
    <string name="lb_estacion_servicio">Service station</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lb_nombre_recambio">Name</string>
    <string name="lb_marca_recambio">Make</string>
    <string name="lb_referencia_recambio">Part Number</string>
    <string name="lb_caracteristicas_recambio">Features</string>
    <string name="lb_comentarios_recambio">Comments</string>
    <string name="title_activity_frm_recambio">Car part</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_errores">No errors</string>
    <string name="titulo_alerta_errores">Oops! Some Fields are Missing </string>
    <string name="error_km_recorridos">The odometer value must be greater than the last refueling</string>
    <string name="error_precio_litro">Price is empty</string>
    <string name="error_coste_repostaje">Refuel cost is empty</string>
    <string name="error_litros">Quantity is empty</string>
    <string name="error_es_completo">Type is empty</string>
    <string name="error_fecha_repostaje">Refuel Date is empty</string>
    <string name="error_km_repostaje">Odometer is empty</string>
    <string name="title_activity_frm_mantenimiento">Service</string>
    <string name="lb_coche_mantenimiento">(*)Car: </string>
    <string name="lb_tipo_mantenimiento">Description: </string>
    <string name="lb_nombre_mantenimiento">Name: </string>
    <string name="lb_fecha_mantenimiento">(*)Date: </string>
    <string name="lb_km_mantenimiento">(*)Odometer: </string>
    <string name="lb_coste_iva"> Cost</string>
    <string name="lb_coste_sin_iva">Coste</string>
    <string name="lb_tanto_cien_iva">%IVA</string>
    <string name="lb_descuento_total"></string>
    <string name="lb_coste_final">Cost</string>
    <string name="lb_comentarios_mantenimiento">Comments</string>
    <string name="error_coche_mantenimiento">Select a car</string>
    <string name="error_fecha_mantenimiento">Date is empty</string>
    <string name="error_km_mantenimiento">Odometer is empty</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="dialogo_delete_repostaje"> Are you sure you want to delete? </string>
    <string name="dialogo_delete_coche"> Are you sure you want to delete? All records will be deleted.</string>
    <string name="dialogo_delete_recambio"> Are you sure you want to delete? </string>
    <string name="dialogo_delete_itv"> Are you sure you want to delete? </string>
    <string name="dialogo_delete_peaje"> Are you sure you want to delete? </string>
    <string name="dialogo_delete_seguro"> Are you sure you want to delete? </string>
    <string name="dialogo_delete_impuesto_circulacion"> Are you sure you want to delete? </string>
    <string name="dialogo_delete_mantenimiento"> Are you sure you want to delete? </string>
    <string name="dialogo_salir_sin_guardar"> Are you sure you want to leave?</string>
    <string name="dialogo_salir_sin_guardar_operaciones_seleccionadas"> Are you sure you want to leave?</string>
    <string name="dialogo_delete_operacion">Are you sure you want to delete? All records will be deleted.</string>
    <string name="dialogo_delete_operacion_recambio">Are you sure you want to delete?</string>
    <string name="opcion_inicio">Home</string>
    <string name="opcion_coches">Cars</string>
    <string name="opcion_repostajes">Refuel</string>
    <string name="opcion_mantenimientos">Services</string>
    <string name="opcion_recambios">Car parts</string>
    <string name="opcion_itv">Vehicle inspection</string>
    <string name="opcion_peajes">Toll</string>
    <string name="opcion_seguros">Insurance</string>
    <string name="opcion_estadisticas">Stats</string>
    <string name="opcion_impuesto_circulacion">Taxes </string>
    <string name="opcion_ajustes">Settings</string>
    <string name="title_activity_frm_itv">Vehicle inspection</string>
    <string name="lb_fecha_itv">(*)Date: </string>
    <string name="lb_precio_itv">Price :</string>
    <string name="lb_estacion_itv">Name: </string>
    <string name="lb_resultado_itv">Result: </string>
    <string name="lb_observaciones_itv">Comments:</string>
    <string name="lb_km_itv">Odometer: </string>
    <string name="unidad_moneda">€</string>
    <string name="unidad_consumo">l/100</string>
    <string name="unidad_consumo_litros">l/100</string>
    <string name="unidad_consumo_galones_imperiales">MPG Imp</string>
    <string name="unidad_consumo_galones_US">MPG US</string>
    <string name="unidad_distancia">km</string>
    <string name="unidad_distancia_km">km</string>
    <string name="unidad_distancia_millas">mi</string>
    <string name="unidad_volumen_litros">liters</string>
    <string name="unidad_volumen_galones_UK">Gallons Imp</string>
    <string name="unidad_volumen_galones_US">Gallons US</string>
    <string name="tipo_repostaje_parcial">Partial</string>
    <string name="title_activity_frm_peaje">Toll</string>
    <string name="lb_fecha_peaje">(*)Date: </string>
    <string name="lb_nombre_peaje">Name: </string>
    <string name="lb_precio_peaje">Toll price: </string>
    <string name="lb_carretera_peaje">Road: </string>
    <string name="lb_direccion_peaje">Direction: </string>
    <string name="lb_ubicacion_peaje">Location: </string>
    <string name="lb_comentarios_peaje">Comements: </string>
    <string name="lb_separador_fecha"> -> </string>
    <string name="title_activity_frm_seguro">Insurance</string>
    <string name="lb_compania_seguro">Company: </string>
    <string name="lb_prima_seguro"> Premium: </string>
    <string name="lb_tipo_seguro">Payments: </string>
    <string name="lb_poliza_seguro">Policy number: </string>
    <string name="lb_fecha_inicio_seguro">(*)Effective date: </string>
    <string name="lb_fecha_vencimiento_seguro">(*)End date: </string>
    <string name="lb_periodicidad_seguro">Periodicity: </string>
    <string name="lb_observaciones_seguro">Comments: </string>
    <string name="daidalos_app_name">aFileDialog</string>
    <string name="title_activity_frm_importar_exportar">Import/Export</string>
    <string name="titulo_ajuste_importar_exportar"> Import/Export</string>
    <string name="subtitulo_ajuste_importar_exportar">Backup or load records</string>
    <string name="lb_almacenamiento_interno"> Internal storage </string>
    <string name="btn_exportar">Export</string>
    <string name="btn_importar">Import</string>
    <string name="lb_Dropbox">Dropbox</string>
    <string name="chk_activar_dropbox">Activate Dropbox</string>
    <string name="mensaje_exportando">Exporting to Dropbox...</string>
    <string name="mensaje_exportado_dropbox_completado">Export completed</string>
    <string name="mensaje_exportando_dropbox_cancelado">Export canceled</string>
    <string name="dialogo_importar_bbdd"> Do you want to import a new database? This delete all actual records</string>
    <string name="importar">Import</string>
    <string name="toast_fichero_seleccionado">Selected file: </string>
    <string name="toast_fichero_creado">Created file: </string>
    <string name="title_activity_fragment_estadisticas">Stats</string>
    <string name="titulo_estadisticas_consumo_medio">Average consumption</string>
    <string name="subtitulo_estadisticas_consumo_medio">Study and compare the consumption of your car</string>
    <string name="lb_descripcion_operacion">Description: </string>
    <string name="lb_comentarios_operacion">Comment: </string>
    <string name="lb_periodicidad_operacion">Periodicity: </string>
    <string name="lb_coste_operacion">Amount: </string>
    <string name="lb_nombre_mantenimiento_operacion">Operation: </string>
    <string name="btn_recambios"> Spare part </string>
    <string name="lb_cantidad_operacion_recambio">Quantity: </string>
    <string name="lb_precio_operacion_recambio">Price: </string>
    <string name="lb_coste_operacion_recambio">Price: </string>
</resources>