<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- NOMBRE OPERACION -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbNombreDetalleMantenimientoOperacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_nombre_mantenimiento_operacion"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtNombreDetalleMantenimientoOperacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal" />
            </LinearLayout>
            <!--DESCRIPCION OPERACION -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left|center">

                <TextView
                    android:id="@+id/lbDescripcionDetalleMantenimientoOperacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_descripcion_operacion"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDescripcionDetalleMantenimientoOperacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal" />
            </LinearLayout>


            <!--PERIODICIDAD OPERACION -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbPeriodicidadDetalleMantenimientoOperacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_periodicidad_operacion" />

                <EditText
                    android:id="@+id/txtPeriodicidadDigitoDetalleMantenimientoOperacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="7"
                    android:numeric="integer" />

                <Spinner
                    android:id="@+id/cmbPeriodicidadUnidadDetalleMantenimientoOperacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--COSTE OPERACION -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbCosteDetalleMantenimientoOperacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_coste_operacion" />

                <EditText
                    android:id="@+id/txtCosteDetalleMantenimientOperacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:minWidth="25sp" />

                <TextView
                    android:id="@+id/lbCosteUnidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unidad_moneda" />
            </LinearLayout>


            <!--COMENTARIOS OPERACION -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbComentariosDetalleMantenimientoOperacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_comentarios_operacion" />

                <EditText
                    android:id="@+id/txtComentariosDetalleMantenimientoOperacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRecambios"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_recambios"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="bottom"
        android:orientation="vertical"></LinearLayout>

</LinearLayout>
