<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbSeleccionarCochePeaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/lb_seleccionar_coche" />

                <!-- COCHES -->

                <Spinner
                    android:id="@+id/cmbCochesPeaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- FECHA PEAJE -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbFechaPeaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/lb_fecha_peaje" />

                <EditText
                    android:id="@+id/txtFechaPeaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--&lt;!&ndash; NOMBRE PEAJE &ndash;&gt;-->

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
            <!--android:id="@+id/lbNombrePeaje"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/lb_nombre_peaje" />-->

            <!--<EditText-->
            <!--android:id="@+id/txtNombrePeaje"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="text"-->
            <!--android:numeric="decimal" />-->
            <!--</LinearLayout>-->

            <!-- NOMBRE PEAJE AUTOCOMPLETE -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbNombrePeaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_nombre_peaje" />


                <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/txtNombrePeajeAuto"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1" />
            </LinearLayout>

            <!-- PRECIO PEAJE -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbPrecioPeaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_precio_peaje" />

                <!--<EditText-->
                <!--android:id="@+id/txtPrecioPeaje"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="numberDecimal"-->
                <!--android:minWidth="50sp"-->
                <!--android:numeric="decimal" />-->

                <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/txtPrecioPeajeAuto"
                    android:inputType="numberDecimal"
                    android:numeric="decimal"
                    android:minWidth="100sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1" />

                <TextView
                    android:id="@+id/lbUnidadMonedaPeaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- CARRETERA PEAJE -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbCarreteraPeaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_carretera_peaje" />

                <!--<EditText-->
                <!--android:id="@+id/txtCarreteraPeaje"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="text"-->
                <!--android:numeric="decimal" />-->

                <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/txtCarreteraPeajeAuto"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1" />
            </LinearLayout>

            <!-- DIRECCION PEAJE -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbDireccionPeaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_direccion_peaje" />

                <!--<EditText-->
                <!--android:id="@+id/txtDireccionPeaje"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->

                <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/txtDireccionPeajeAuto"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1" />
            </LinearLayout>

            <!-- UBICACION PEAJE -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbUbicacionPeaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_ubicacion_peaje" />

                <!--<EditText-->
                <!--android:id="@+id/txtUbicacionPeaje"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->

                <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/txtUbicacionPeajeAuto"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1" />
            </LinearLayout>


            <!-- COMENTARIOS PEAJE -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbComentariosPeaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_comentarios_peaje" />

                <EditText
                    android:id="@+id/txtComentariosPeaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="bottom"
        android:orientation="vertical"></LinearLayout>

</LinearLayout>
